--- a/web dev.html
+++ b/web dev.html
@@ -9,6 +9,6 @@
 	<a href="https://google.com" target="_blank" title="For google">Click the link</a>
 	<p>My name is<br>
 	cat</p>
-	<img src="C:\Users\Vartik\Desktop\logo designs/11.png">
+	<img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80">
 </body>
 </html>
